--- a/ac3/templates/base.html
+++ b/ac3/templates/base.html
@@ -10,7 +10,7 @@
   {% bootstrap_javascript %}
   <link rel="stylesheet" href="{% static 'style.css' %}"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MovieLens rating site</title>
+    <title>Alan's Iron Yard apps</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Movie Ratings</a>
+      <a class="navbar-brand" href="">Alan IYC4</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
