--- a/ac3/templates/index.html
+++ b/ac3/templates/index.html
@@ -12,58 +12,67 @@
     </p>
   </div>
 
-  <p>This is a web application that uses a variety of tools. It has a locally
-      hosted copy of <a href="http://getbootstrap.com/">bootstrap</a> and
-      <a href="https://jquery.com/download/">jQuerry</a>.
-      It also uses a <a href="http://www.postgresql.org/">PostgreSQL</a> database.
-      Whether or not you are looking at that version right now, it has
-      been test-deployed on <a href="https://www.heroku.com/">Heroku</a>.
-      Some <a href="http://matplotlib.org/">matplotlib</a> went into
-      making graphs for the movie pages.
-
-      This is the index page. Top 20 movie link exists below, but you should
-      avoid it in the live version due to lage. Same goes for genres.</p>
+  <p>After finishing the Iron Yard course, I thought it would be nice to
+      consolidate all the Django apps we made into a single one and get a
+      nice-looking domain name for it as well. Running 5 different heroku
+      apps at the same time is not ideal either.</p>
 
 
 
   <div class="row">
     <div class="col-sm-4">
-      <div class="page-header"><h2>View some users</h2></div>
+      <div class="page-header"><h2>Movie Ratings</h2></div>
+      <p>You can make an account on this site to rate movies, but it also has
+        data taken from the MovieLens project pre-loaded into it, including
+        1 million reviews.</p>
       <ul>
-        <li><a href="/user.html1">User number 1</a></li>
-        <li><a href="/user.html10">User number 10</a></li>
-        <li><a href="/user.html100">User number 100</a></li>
-        <li><a href="/user.html111">User number 111</a></li>
-        <li><a href="/user.html6044">Clinton's page</a></li>
+        <li><a href="movies/">go to Movies app</a></li>
+        <li><a href="https://github.com/AlanCoding/django-movies">Original Repo</a></li>
       </ul>
     </div><div class="col-sm-4">
-    <div class="page-header"><h2>View some movies</h2></div>
+      <div class="page-header"><h2>URLy Bird</h2></div>
+      <p>This is a URL shortener that creates a hash when a user submits a link.
+        It also counts the clicks on the link and gives stats for different users.</p>
       <ul>
-        <li><a href="/movie.html2987">Who Framed Roger Rabbit</a></li>
-        <li><a href="/movie.html3421">Animal House</a></li>
-        <li><a href="/movie.html2124">The Addams Family</a></li>
-        <li><a href="/movie.html2554">Children of the Damned</a></li>
-      </ul>
-    </div><div class="col-sm-4">
-    <div class="page-header"><h2>View some genres</h2></div>
-      <ul>
-        <li><a href="/genre.html3">Comedy</a></li>
-        <li><a href="/genre.html5">Fantasy</a></li>
-        <li><a href="/genre.html7">Drama</a></li>
+        <li><a href="/urly/index.html">go to URLy Bird app</a></li>
+        <li><a href="https://github.com/AlanCoding/urly-bird">Original Repo</a></li>
       </ul>
     </div>
+
+    <div class="col-sm-4">
+      <div class="page-header"><h2>Questions Box</h2></div>
+      <p>Clone of Stack Overflow. This was a group project with 2 people, and also
+      one of my best products from the class. It gives a single-page view of a
+        question that allows comments on the question and on the answers.</p>
+      <ul>
+        <li><a href="qbox/">go to Questions Box</a></li>
+        <li><a href="https://github.com/bdeshaz/questions-box">Original Repo</a></li>
+      </ul>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="page-header"><h2>Clickinator</h2></div>
+      <p>This was a morning project done in a group, but we only had about an
+      hour to work on it... and we needed to learn the tools while we were
+        at it. The API calls are very central to my own personal learning
+    goals so I hope to come back and polish it up soon.</p>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="page-header"><h2>Stats Tracker</h2></div>
+      <p>Also a group project, this is a single-page app designed to let
+      users mark the number of instances of something for a given date.</p>
+    <ul>
+      <li><a href="https://github.com/tshealy/statstracker">Original Repo</a></li>
+    </ul>
+    </div>
+
   </div>
 
+<hr />
+  <p>See the <a href="https://tiyd-python-2015-05.github.io/">Original cirriculium</a>
+  </p>
 
-    <p>
-      View the <a href="/top20.html">Top 20 rated movies</a>
-    </p>
-    <p>Data comes from the <a href="http://grouplens.org/datasets/movielens/">MovieLens</a>
-        dataset. You can visit <a href="https://movielens.org/">their site</a> to leave
-        your own non-commercial movie reviews.
-    </p>
-    <p>Site was created as part of The Iron Yard Python curriculum.
-    </p>
     <a href="http://www.djangoproject.com/">
       <img src="https://www.djangoproject.com/m/img/badges/djangopowered126x54.gif" border="0" alt="Powered by Django." title="Powered by Django." /></a>
 
