--- a/ac3/movies/templates/movies/base.html
+++ b/ac3/movies/templates/movies/base.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Alan IYC4</a>
+      <a class="navbar-brand" href="/movies/">Movies App</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
