--- a/ac3/movies/templates/movies/movie.html
+++ b/ac3/movies/templates/movies/movie.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "movies/base.html" %}
 {% load bootstrap3 %}
 
 {% block content %}
@@ -99,7 +99,7 @@
       <tbody>
         {% for rating in ratings %}
         <tr>
-          <td><a href="{% url 'view_user' rating.rater.id %}">
+          <td><a href="{% url 'view_rater' rating.rater.id %}">
             {{ rating.rater.user.username }} (# {{ rating.rater.id }})</a></td>
           <td>{{ rating.get_rating_display }}</td>
           <td>{{ rating.print_date }}</td>
