--- a/ac3/movies/templates/movies/user.html
+++ b/ac3/movies/templates/movies/user.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "movies/base.html" %}
 {% load bootstrap3 %}
 
 {% block content %}
     <p>
-      <div style="float:left"><a href="{% url 'view_user' rater.prior_user %}">Previous User</a></div>
-      <div style="float:right"><a href="{% url 'view_user' rater.next_user %}">Next User</a></div>
+      <div style="float:left"><a href="{% url 'view_rater' rater_id=rater.prior_user %}">Previous User</a></div>
+      <div style="float:right"><a href="{% url 'view_rater' rater_id=rater.next_user %}">Next User</a></div>
       <div>&nbsp;</div>
     </p>
 
