--- a/ac3/qbox/templates/qbox/base.html
+++ b/ac3/qbox/templates/qbox/base.html
@@ -28,14 +28,14 @@
       <ul class="nav nav-pills pull-left">
         <li><h3 class="text-muted">Question Box</h3></li>
         <li role="presentation"><a href="{% url 'view_questions' %}">Questions</a></li>
-{#        <li role="presentation"><a href="{% url 'view_users' %}">Users</a></li> #}
+{#        <li role="presentation"><a href="{% url 'qbox_view_users' %}">Users</a></li> #}
         <li role="presentation"><a href="{% url 'view_tags' %}">Tags</a></li>
         <li role="presentation"><a href="{% url 'ask_question' %}">Ask</a></li>
       </ul>
       <ul class="nav nav-pills pull-right">
 
         {% if request.user.is_authenticated %}
-          <!-- <li role="presentation"><a href="{% url 'view_user' request.user.id %}">User: {{ request.user.username }}</a></li> -->
+          <li role="presentation"><a href="{% url 'qbox_view_user' request.user.id %}">User: {{ request.user.username }}</a></li>
           <li role="presentation"><a href="{% url 'view_logout' %}">log out</a></li>
         {% else %}
          <li role="presentation"><a href="{% url 'view_login' %}">Log in</a></li>
