--- a/ac3/qbox/templates/qbox/question.html
+++ b/ac3/qbox/templates/qbox/question.html
@@ -18,7 +18,7 @@
         {% endif %}
         {{ question.title }}</h3>
     <p class="lead">{{ question.text }}</p>
-    <p class="pull-right">asked by: <a href="{% url 'view_user' question.owner.id %}">{{ question.owner.username }}</a></p>
+    <p class="pull-right">asked by: <a href="{% url 'qbox_view_user' question.owner.id %}">{{ question.owner.username }}</a></p>
 </div>
 
 <p> <a href="{% url 'add_tag' question.id %}">Add tags on this question</a> </p>
@@ -42,7 +42,7 @@
         {{ comment.text }}
     </div>
     <div class="col-md-2">
-        <a href="{% url 'view_user' comment.owner.id %}">{{ comment.owner }}</a>
+        <a href="{% url 'qbox_view_user' comment.owner.id %}">{{ comment.owner }}</a>
     </div>
 </div>
 {% endfor %}
@@ -105,7 +105,7 @@
             </td>
 			<td>{{ ans.text }} <br />
                 <p class="pull-right">
-                    <a href="{% url 'view_user' ans.owner.id %}">
+                    <a href="{% url 'qbox_view_user' ans.owner.id %}">
                     {{ ans.owner.username }}</a></p>
                 <hr />
 
@@ -123,7 +123,7 @@
                         {{ comment.text }}
                     </div>
                     <div class="col-md-2">
-                        <a href="{% url 'view_user' comment.owner.id %}">
+                        <a href="{% url 'qbox_view_user' comment.owner.id %}">
                             {{ comment.owner }}</a>
                     </div>
                 </div>
