--- a/ac3/templates/base.html
+++ b/ac3/templates/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
+{% load base_extras %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -23,8 +24,8 @@
       <h3 class="text-muted">Alan's App Portfolio</h3>
       <nav>
         <ul class="nav nav-justified">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/">User List</a></li>
+          <li class="{% navactive request 'view_main_index' %}"><a href="/">Home</a></li>
+          <li class="{% navactive request 'view_users' %}"><a href="{% url 'view_users' %}">User List</a></li>
           <li><a href="/">About Alan</a></li>
           {% if request.user.is_authenticated %}
             <li><a href="user.html{{ request.user.rater.id }}">User: {{ request.user.username }}</a></li>
@@ -80,8 +81,6 @@
     </div>
   </div> -->
 <!-- </nav> -->
-
-{{ request.get_path }}
 
 <div class="container theme-showcase" role="main">
 
