--- a/ac3/templates/base.html
+++ b/ac3/templates/base.html
@@ -26,7 +26,7 @@
         <ul class="nav nav-justified">
           <li class="{% navactive request 'view_main_index' %}"><a href="/">Home</a></li>
           <li class="{% navactive request 'view_users' %}"><a href="{% url 'view_users' %}">User List</a></li>
-          <li><a href="/">About Alan</a></li>
+          <li class="{% navactive request 'view_alan' %}"><a href="{% url 'view_alan' %}">About Alan</a></li>
           {% if request.user.is_authenticated %}
             <li><a href="user.html{{ request.user.rater.id }}">User: {{ request.user.username }}</a></li>
             <li><a href="{% url 'view_logout' %}">log out</a></li>
