consistent pagination and listing bugs

--- a/ac3/templates/about_alan.html
+++ b/ac3/templates/about_alan.html
@@ -21,6 +21,16 @@
 
     <hr class="featurette-divider">
 
+    <div class="featurette" id="services">
+        <img class="featurette-image img-circle img-responsive pull-left" src="{% static 'birds.jpg' %}">
+        <h2 class="featurette-heading">The Second Heading
+            <span class="text-muted">Is Pretty Cool Too.</span>
+        </h2>
+        <p class="lead">Donec ullamcorper nulla non metus auctor
+    fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+    commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
+    tellus ac cursus commodo.</p>
+    </div>
         <!-- First Featurette -->
         <div class="featurette" id="about">
             <a href="http://physics.stackexchange.com/users/1255/alan-rominger"><img class="featurette-image img-circle img-responsive pull-right" src="{% static 'alan/physics.PNG' %}"></a>
