--- a/ac3/qbox/templates/qbox/question.html
+++ b/ac3/qbox/templates/qbox/question.html
@@ -71,7 +71,9 @@
 
 <div class="row marketing">
 
-{% bootstrap_pagination page_obj %}
+    {% if is_paginated %}
+        {% bootstrap_pagination page_obj %}
+    {% endif %}
 
 <table class="table table-striped">
 	<thead>
@@ -147,6 +149,8 @@
 </div>
 
 
-{% bootstrap_pagination page_obj %}
+{% if is_paginated %}
+    {% bootstrap_pagination page_obj %}
+{% endif %}
 
 {% endblock %}
