--- a/ac3/qbox/templates/qbox/user_list.html
+++ b/ac3/qbox/templates/qbox/user_list.html
@@ -10,7 +10,9 @@
 
 <div class="row marketing">
 
-{% bootstrap_pagination page_obj %}
+    {% if is_paginated %}
+        {% bootstrap_pagination page_obj %}
+    {% endif %}
 
 <table class="table table-striped">
 	<thead>
@@ -35,6 +37,8 @@
 </div>
 
 
-{% bootstrap_pagination page_obj %}
+{% if is_paginated %}
+    {% bootstrap_pagination page_obj %}
+{% endif %}
 
 {% endblock %}
