--- a/ac3/urly/templates/urly/bookmarker.html
+++ b/ac3/urly/templates/urly/bookmarker.html
@@ -28,7 +28,10 @@
 </div>
 </div>
 
-{% bootstrap_pagination page_obj %}
+{% if is_paginated %}
+    {% bootstrap_pagination page_obj %}
+{% endif %}
+
 <table class="table table-striped">
 	<thead>
 		<tr>
@@ -61,6 +64,9 @@
 	</tbody>
 </table>
 </div>
-{% bootstrap_pagination page_obj %}
+
+{% if is_paginated %}
+    {% bootstrap_pagination page_obj %}
+{% endif %}
 
 {% endblock %}
