--- a/ac3/urly/templates/urly/usr_list.html
+++ b/ac3/urly/templates/urly/usr_list.html
@@ -11,7 +11,9 @@
 
 <div class="row marketing">
 
-{% bootstrap_pagination page_obj %}
+    {% if is_paginated %}
+        {% bootstrap_pagination page_obj %}
+    {% endif %}
 
 <table class="table table-striped">
 	<thead>
@@ -25,7 +27,7 @@
 	<tbody>
 		{% for bmkr in bookmarkers %}
 		<tr>
-			<td><a href="{% url 'bookmarker' bmkr.id %}">
+			<td><a href="{% url 'bookmarker' bmkr.user.id %}">
 				{{ bmkr.user.username }}</a></td>
 			<td>{{ bmkr.age }}</td>
 			<td>{{ bmkr.gender }}</td>
@@ -36,6 +38,9 @@
 </table>
 
 </div>
-{% bootstrap_pagination page_obj %}
+
+{% if is_paginated %}
+    {% bootstrap_pagination page_obj %}
+{% endif %}
 
 {% endblock %}
