begun to develop user detail pages

--- a/ac3/templates/about_alan.html
+++ b/ac3/templates/about_alan.html
@@ -33,7 +33,7 @@
     </div>
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <a href="http://physics.stackexchange.com/users/1255/alan-rominger"><img class="featurette-image img-circle img-responsive pull-right" src="{% static 'alan/physics.PNG' %}"></a>
+            <a href="http://physics.stackexchange.com/users/1255/alan-rominger"><img class="featurette-image img-circle img-responsive pull-right" src="{% static 'alan/physics.png' %}"></a>
             <h2 class="featurette-heading">Physics Stack Exchange
                 <span class="text-muted">Contrbutions to Q and A</span>
             </h2>
