started user info edit page

--- a/ac3/templates/user_detail.html
+++ b/ac3/templates/user_detail.html
@@ -15,6 +15,8 @@
 
   {% if is_self %}<p>This is you!</p>{% endif %}
 
+  <p><a href="{% url 'edit_user' %}">Edit your information</a></p>
+
   <div class="row">
       <div class="col-sm-6">
           <h3>Basic stats</h3>
