edit form fixed, more for about page

--- a/ac3/templates/about_alan.html
+++ b/ac3/templates/about_alan.html
@@ -22,14 +22,23 @@
     <hr class="featurette-divider">
 
     <div class="featurette" id="services">
-        <img class="featurette-image img-circle img-responsive pull-left" src="{% static 'birds.jpg' %}">
-        <h2 class="featurette-heading">The Second Heading
-            <span class="text-muted">Is Pretty Cool Too.</span>
+        <img class="featurette-image img-circle img-responsive pull-left" src="{% static 'alan/mine_mapper.png' %}">
+        <h2 class="featurette-heading">Development Self Study
+            <span class="text-muted">Before the Iron Yard</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor
-    fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
-    commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-    tellus ac cursus commodo.</p>
+        <p class="lead">After I came to realize that software was likely to be my
+            career direction, I looked into a multitude of great, free, online
+            courses to help advance my knowledge.
+            <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=3144742">
+                On Microsoft Virtual Academy</a> I took
+            Database Fundamentals, Intro to C#/.NET, and Javascript.
+            <a href="https://www.codecademy.com/AlanProgramming">On Codecademy</a>
+            I took Python, HTML/CSS, and JavaScript. I am also very interested
+            in the full track of Nand to Tetris. You can play with my
+            <a href="{% static 'mine.html' %}">Minesweeper clone</a>
+            as well as my
+            <a href="http://alancoding.github.io/jumble.html">word un-scrambler</a>.
+        </p>
     </div>
         <!-- First Featurette -->
         <div class="featurette" id="about">
@@ -41,10 +50,6 @@
                 outlet, and learned lots about the Stack Exchange networks as well.</p>
         </div>
 
-<h4>Physics Stack Exchange</h4>
-
-<p>I have greately enjoyed contributing to the physics community through this
-    outlet, and learned lots about the Stack Exchange networks as well.</p>
 
 
 {% if is_paginated %}
