pick up stray change on computer

--- a/ac3/templates/user_detail.html
+++ b/ac3/templates/user_detail.html
@@ -13,9 +13,9 @@
     </p>
   </div>
 
-  {% if is_self %}<p>This is you!</p>{% endif %}
+  {% if is_self %}<p>This is you!</p>
 
-  <p><a href="{% url 'edit_user' %}">Edit your information</a></p>
+  <p><a href="{% url 'edit_user' %}">Edit your information</a></p>{% endif %}
 
   <div class="row">
       <div class="col-sm-6">
