update minesweeper links

--- a/ac3/templates/about_alan.html
+++ b/ac3/templates/about_alan.html
@@ -35,9 +35,9 @@
             <a href="https://www.codecademy.com/AlanProgramming">On Codecademy</a>
             I took Python, HTML/CSS, and JavaScript. I am also very interested
             in the full track of Nand to Tetris. You can play with my
-            <a href="{% static 'mine.html' %}">Minesweeper clone</a>
+            <a href="http://rominger.xyz/old">Minesweeper clone</a>
             as well as my
-            <a href="http://alancoding.github.io/jumble.html">word un-scrambler</a>.
+            <a href="http://rominger.xyz/old/jumble.html">word un-scrambler</a>.
         </p>
     </div>
         <!-- First Featurette -->
