--- a/ac3/templates/base.html
+++ b/ac3/templates/base.html
@@ -60,8 +60,8 @@
 
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">More to play with</li>
-            <li><a href="http://alancoding.github.io/mine.html">Minesweeper</a></li>
-            <li><a href="http://alancoding.github.io/jumble.html">Word Jumble</a></li>
+            <li><a href="http://rominger.xyz/old/mine.html">Minesweeper</a></li>
+            <li><a href="http://rominger.xyz/old/jumble.html">Word Jumble</a></li>
           </ul>
         </li>
 
